--- a/index.html
+++ b/index.html
@@ -116,3 +116,20 @@
     <script src="script.js"></script>
 </body>
 </html>
+
+
+<script>
+function goToView2() {
+    document.getElementById("view1").classList.remove("active");
+    document.getElementById("view2").classList.add("active");
+}
+
+function goToView3() {
+    document.getElementById("view2").classList.remove("active");
+    document.getElementById("view3").classList.add("active");
+}
+
+function handleNo() {
+    alert("Are you sure? 🥺");
+}
+</script>
