--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <!-- VIEW 1: The Proposal -->
             <div class="view active" id="view1">
                 <div class="text-center">
-                    <img src="https://i.imgur.com/Ds4Nup0.jpeg">
+                    <img src="https://i.imgur.com/Ds4Nup0.jpeg" class="proposal-img">
                     <h1 class="heading">Will you be mine 🥺?</h1>
                     <div class="button-group">
                         <button class="btn-red" onclick="goToView2()">YES</button>
@@ -25,7 +25,7 @@
             <!-- VIEW 2: The Celebration -->
             <div class="view" id="view2">
                 <div class="text-center">
-                    <img src="https://i.imgur.com/QhLcvGm.jpeg">
+                  <img src="https://i.imgur.com/QhLcvGm.jpeg" class="proposal-img">
                     <h1 class="heading">Happy Valentine Day Baby! 💍</h1>
                     <p class="subtext">Every second with you is a celebration. You are the spark that makes my world so much brighter!</p>
                     <button class="btn-red" onclick="goToView3()" style="margin-top: 30px;">SEE MY GIFTS →</button>
